--- a/webapp/WEB-INF/templates/admin/plugins/jpa/modules/hibernate/monitor_hibernate.html
+++ b/webapp/WEB-INF/templates/admin/plugins/jpa/modules/hibernate/monitor_hibernate.html
@@ -1,4 +1,4 @@
-<div class="row" >
+<div class="row-fluid" >
 	<div class="container" >
 		<div class="span10 offset1">
 		<fieldset>
@@ -25,7 +25,7 @@
 		</div>
 	</div>
 </div>
-<div class="row" >
+<div class="row-fluid" >
 	<div class="container" >
 		<div class="span10 offset1">
 		<fieldset>
