LUTECE-1493 : Bootstrap CSS Framework integration
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/module-jpa-hibernate@44439 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/admin/plugins/jpa/modules/hibernate/monitor_hibernate.html
+++ b/webapp/WEB-INF/templates/admin/plugins/jpa/modules/hibernate/monitor_hibernate.html
@@ -15,7 +15,7 @@
 	    </p>
 	    <#if !stats_state>
 			<form class="form-horizontal" method="post" action="jsp/admin/plugins/jpa/modules/hibernate/DoEnableStatistics.jsp">
-				<button class="btn btn-success" type="submit"><i class="icon-ok icon-white"></i>&nbsp;#i18n{module.jpa.hibernate.monitor.stats.buttonEnable}</button>
+				<button class="btn btn-success btn-samll" type="submit"><i class="icon-ok icon-white"></i>&nbsp;#i18n{module.jpa.hibernate.monitor.stats.buttonEnable}</button>
 			</form>
 	    <#else>
 			<form class="form-horizontal" method="post" action="jsp/admin/plugins/jpa/modules/hibernate/DoDisableStatistics.jsp">
