JPAHIBERNATE-20 : Small UI improvements

--- a/webapp/WEB-INF/templates/admin/plugins/jpa/modules/hibernate/monitor_hibernate.html
+++ b/webapp/WEB-INF/templates/admin/plugins/jpa/modules/hibernate/monitor_hibernate.html
@@ -1,5 +1,7 @@
 <div class="row-fluid" >
     <div class="col-md-10 col-md-offset-1">
+        <img class="pull-right" src="images/admin/skin/plugins/jpa/modules/hibernate/hibernate.png" alt="hibernate logo" />
+        <br>
         <fieldset>
             <legend>#i18n{module.jpa.hibernate.monitor.stats.title}</legend>
             <p>
